--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=3000
 
 SECRET=asd112j3ihshu192
 
-DB="host=localhost user=postgres password=ahmad dbname=elibrary_app port=5432 sslmode=disable"
+DB="host=35.233.180.60 user=postgres password=ahmad dbname=elibrary_app port=5432 sslmode=disable"
